syntax = "proto3";

package POGOProtos.Map.Fort;

enum FortSponsor {
	UNSET_SPONSOR = 0;
	MCDONALDS = 1;
	POKEMON_STORE = 2;
}

