syntax = "proto3";

package POGOProtos.Networking.Responses;

import "POGOProtos/Map/MapCell.proto";
import "POGOProtos/Map/MapObjectsStatus.proto";

message GetMapObjectsResponse {
	repeated POGOProtos.Map.MapCell map_cells = 1;
	POGOProtos.Map.MapObjectsStatus status = 2;
}

